# rust-aoc-2022

./: Cargo.toml  README.md
benches/: bench.rs
src/: day01.rs  main.rs  utils.rs
src/day01/: main.rs
src/day02/: main.rs
src/day03/: main.rs
src/day04/: main.rs
src/dayXX/: main.rs
